--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nuanplan",
   "version": "0.1.0",
   "private": true,
+  "start_url": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
