--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuanplan",
   "version": "0.1.0",
   "private": true,
-  "start_url": "http://www.nuanplan.com",
+  "start_url": "http://www.nuanplan.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy":  "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
