--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,3 +38,9 @@ jobs:
         user_email: 'nd117_r09_n12@hotmail.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
         repository: ${{ github.repository }}
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: |
+          **/node_modules
+        key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
