--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuanplan",
   "version": "0.1.0",
   "private": true,
-  "homepage":"nuanplan",
+  "homepage": "nuanplan",
   "start_url": "http://www.nuanplan.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -11,6 +11,7 @@
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
