--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "homepage": "nuanplan",
   "start_url": "http://www.nuanplan.com",
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.8.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
