--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@faker-js/faker": "^7.2.0",
     "@mui/material": "^5.8.3",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "ag-grid-react": "^27.3.0",
     "bootstrap": "^5.2.0-beta1",
     "chart.js": "^3.8.0",
     "gh-pages": "^4.0.0",
     "react": "^18.1.0",
+    "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-pro-sidebar": "^0.7.1",
