update export data

--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "ag-grid-community": "^27.3.0",
     "ag-grid-react": "^27.3.0",
     "bootstrap": "^5.2.0-beta1",
     "chart.js": "^3.8.0",
     "gh-pages": "^4.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.1.0",
