--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.2.1",
     "ag-grid-community": "^27.3.0",
     "ag-grid-react": "^27.3.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "chart.js": "^3.8.0",
     "docx": "^7.3.0",
